# night-hawk

./: CurrentProgress.md  README.md
night-hawk/: INSTALL  Makefile.am  acinclude.m4  aclocal.m4  configure  maintainer-conf
night-hawk/FreeBSD/: Makefile  query-pr-26341.html
night-hawk/NetBSD/: README.html
night-hawk/data/Anoyle/: Bridge.m
night-hawk/data/Discovery/: Astronomy1.f  Botany1.m  Botany2.f  Botany2.m
night-hawk/data/Esperence/: Cargo.f  Hull.m
night-hawk/data/Haldeck/: Quarters.f  chars
night-hawk/data/Mearkat/: chars
night-hawk/data/NightHawk/: Bridge.f  Cargo.f  Eng1.f  Eng2.f  Engineering.f  NutHouse.f  map.xpm
night-hawk/data/Ophukus/: Trauma2.f
night-hawk/data/Seafarer/: Engineering.m  Makefile.am  Makefile.in  Quarters.m  map.xpm
night-hawk/data/Tobruk/: Dock.f  chars
night-hawk/data/Zaxon/: Hull.f  Makefile.am  chars
night-hawk/data/fx/: low_shields.8  no_weapon.8
night-hawk/data/xpm/standard/: credit_1.xpm  credit_4.xpm  digits2.xpm  docking_to_ship.xpm  flr_base_cyan.xpm  intro_back_4.xpm  laser_cb.xpm  ntitle.xpm  paused.xpm
night-hawk/doc/: nighthawk.6
night-hawk/new_stuff/: cannon1.au
night-hawk/new_stuff/definite/: bananas.raw  bananas2.raw  bananas3.raw  explosion_1.raw  explosion_2.8  laser_buzz.8  laser_tiger_eye.8  laser_uvarovite.8  low_shields.8  no_weapon.8  no_weapon.old.8  rand.8  raw.txt  tfer-on.8
night-hawk/src/: floor.cc  misc.cc  misc.h  ned.cc  nighthawk.cc  ship.cc  tdoor.h  tdroid_8xx.h  xpm_view.cc
night-hawk/src_sound/: Make.common  dsp_mixxer.c  funktracker.c  funktracker_defs.h  nighthawk_sound.c
nighthawk-2.2/: Makefile.in  acconfig.h  configure  configure.in  options.h
nighthawk-2.2/data/Anoyle/: Hull.m  map.xpm
nighthawk-2.2/data/Discovery/: Astrophys.m  Botany3.f  Makefile.in
nighthawk-2.2/data/Esperence/: Engineering.m
nighthawk-2.2/data/Friendship/: Bridge.m  Gunnery3.m  Hull.f  Makefile.in  chars
nighthawk-2.2/data/Mearkat/: Makefile.am  Makefile.in
nighthawk-2.2/data/Ophukus/: Makefile.in  chars
nighthawk-2.2/data/Seafarer/: Cargo2.f  Cargo3.m  chars
nighthawk-2.2/data/Zaxon/: Engineering.f  Hull.m
nighthawk-2.2/data/fx/: 7xx_voice.8  power_up.8  snoise4.raw
nighthawk-2.2/data/xpm/: Makefile.in
nighthawk-2.2/data/xpm/standard/: Makefile.am  credit_5.xpm  flr_door_h_cyan.xpm  flr_wall_h_cyan.xpm  flr_wall_tl_cyan.xpm  intro_back_2.xpm  laser_uv.xpm  neg.xpm  trans_terminated.xpm
nighthawk-2.2/doc/: Makefile.in  nighthawk.6
nighthawk-2.2/list/: Makefile  gccout  list  list.c
nighthawk-2.2/nighthawk-1.0/: Makefile  floor.cc  misc.h  nighthawk.cc  object.cc  ship.cc  tdroid.h  tdroid_1xx.h  tdroid_6xx.h  tedit_floor.h  tfloor.h  tlaser.h  tparadroid.h  xpm_view.cc
nighthawk-2.2/nighthawk-1.0/debian/: README  changelog  control  copyright  menu  nighthawk.6  postinst  postrm  rules  upstream.changes
nighthawk-2.2/nighthawk-1.0/nighthawk_data/: .highscores.db
nighthawk-2.2/nighthawk-1.0/nighthawk_data/Anoyle/: Bridge.m  Engineering.m  Gunnery1.m  Gunnery2.f  Gunnery2.m  Hull.m  Medical.m  chars
nighthawk-2.2/nighthawk-1.0/nighthawk_data/Discovery/: Astronomy1.m  Astronomy2.m  Astrophys.f  Astrophys.m  Botany1.m  Botany2.m  Botany3.m  Botany4.m  Bridge.m  Defense.f  Defense.m  Engineering.m  chars
nighthawk-2.2/nighthawk-1.0/nighthawk_data/Esperence/: Bridge.f  Bridge.m  Cargo.m  Dock.m  Engineering.f  Engineering.m  Gunnery1.m  Gunnery2.m  Gunnery3.m  Hull.m  chars
nighthawk-2.2/nighthawk-1.0/nighthawk_data/Friendship/: Bridge.m  Decoy.f  Decoy.m  Dock.m  Engineering.m  Gunnery1.f  Gunnery1.m  Gunnery2.m  Gunnery3.m  Hull.m  chars  map.xpm
nighthawk-2.2/nighthawk-1.0/nighthawk_data/Haldeck/: Bridge.m  Cargo.m  Engineering.m  Quarters.m  chars  map.xpm
nighthawk-2.2/nighthawk-1.0/nighthawk_data/Mearkat/: Bridge.m  Hull.m  chars
nighthawk-2.2/nighthawk-2.2/: INSTALL  config.h.in
nighthawk-2.2/nighthawk-2.2/data/: Makefile.am
nighthawk-2.2/nighthawk-2.2/data/Tobruk/: Dock.m  (+3 more)
nighthawk-2.2/nighthawk-2.2/doc/: nighthawk.6
nighthawk-2.2/nighthawk-2.2/src/: Makefile.in  misc.cc  nighthawk.cc  object.cc  scroll.inc  ship.cc  tentity.h
nighthawk-2.2/nighthawk-2.2/src_sound/: Makefile.am  README.FunktrackerGOLD  dsp_mixxer.c  funkload.h  funktracker_defs.h  nighthawk_sound.c  nighthawk_sound.h
nighthawk-2.2/nighthawk-2.3/: AC_FD_MSG  Makefile  config.cache  config.h  config.status  configure  makeout.redhat  options.h
nighthawk-2.2/nighthawk-2.3/data/: Makefile  Makefile.in  genMakefileAM
nighthawk-2.2/nighthawk-2.3/doc/: Makefile
nighthawk-2.2/nighthawk-2.3/src/: Makefile  misc.cc  ned.cc  nighthawk_defs.h  object.cc  tedit_floor.h
nighthawk-2.2/nighthawk-2.3/src_sound/: Make.common  Makefile  funkload.c
nighthawk-2.2/src/: Makefile.am  defs.h  floor.cc  misc.cc  ned.cc  nighthawk.cc  nighthawk_defs.h  object.cc  ship.cc  tdroid.h  tfloor.h  tlaser.h  tpower_bay.h  tship.h  tship_demo.h  xpm_view.cc
nighthawk-2.2/src_sound/: dsp_mixxer.h  funktracker.h  nighthawk_sound.h
nighthawk-4.0/: CMakeLists.txt  README  WHATS_NEW  config.h.in  nighthawk.desktop.in
nighthawk-4.0/data/Nighthawk/: comment.d  scroll_story.d
nighthawk-4.0/data/fx/: 7xx_voice.8  8xx_voice.8  alert_siren.8  door_open.8  droid_evase.8  droid_hit_1.8  floor_complete.8  laser_crocoite_benzol.8  laser_tiger_eye.8  laser_uvarovite.8  low_shields.8  rand.8  ship_complete.8  snoise1.raw  snoise2.raw  snoise5.raw  snoise7_science.raw  trans_terminated.8
nighthawk-4.0/data/music/: rescue from vega.it
nighthawk-4.0/man/: nighthawk.6
nighthawk-4.0/src/: defs.h  door.cc  droid.cc  droid_xxx.cc  edit_floor.cc  floor.cc  game.cc  intro.cc  intro_externs.h  linked_data.c  linked_data_externs.h  main.cc  misc.c  misc_externs.h  ned.cc  ned_externs.h  openal.c  openal_externs.h  opengl.c  opengl_externs.h  paradroid.cc  png_loader.c  png_loader_externs.h  power_bay.cc  scores.c  scores_externs.h  ship.cc  sprite_loader.c  sprite_loader_externs.h  tdoor.h  tdroid.h  tdroid_2xx.h  tdroid_4xx.h  tdroid_6xx.h  tdroid_7xx.h  tedit_floor.h  tentity.h  tfloor.h  tlaser.h  tparadroid.h  (+2 more)
(+427 files in other folders)
